Add document ID iterator API
### Added

- Document ID iterator API `get_docid`, both for SeekStorm library and server.
  Allows to iterate through all documents ID (and with get_document through all documents) of the whole index, in both directions.
  Allows to sequentially retrieve all documents even from large collections without collecting them to size-limited RAM first, e.g., for index export and inspection.
  Ensures without invoking search, that only valid document IDs are returned, even though document ID are not guaranteed to be continuous and gapless!
  The returned docid are always monotonically increasing, and are the closest valid document IDs to the given docid in the requested direction.
  Taking multiple document IDs at once allows to reduce the number of calls and thus increases performance (especially over REST).

  Explanation of non-continuous docid:
  In SeekStorm, the document IDs are **eventually** continuous.
  In the multi-sharded index, each shard manages its own document ID.
  Due to the non-deterministic, load-dependent distribution of documents across the shards, the docid within the shards increases asynchronously. When calculating a global docid from the local docid from different shards, there are temporary gaps between docid origination from shards with different numbers of indexed documents.
  That's why when you just iterate from 0 to the number of globally indexed documents, there are gaps of invalid document ID towards the end. The get_docid iterator takes care of that and returns only valid document IDs.

  - docid=None, take>0: **skip first s document IDs**, then **take next t document IDs** of an index.
  - docid=None, take<0: **skip last s document IDs**, then **take previous t document IDs** of an index.
  - docid=Some, take>0: **skip next s document IDs**, then **take next t document IDs** of an index, relative to a given document ID, with end-of-index indicator.
  - docid=Some, take<0: **skip previous s document IDs**, then
